# ROS2_Training

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  battery_node  cpp_node  hw_status_publisher  led_panel_node  number_counter  number_publisher  number_reset  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/lib/my_py_pkg/: battery_node  led_panel_node  number_reset
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
log/: latest_build
my_cpp_pkg/: CMakeLists.txt
my_cpp_pkg/src/: add_two_ints_client.cpp  battery_node.cpp  led_panel_node.cpp  number_counter.cpp  number_publisher.cpp  number_reset.cpp  robot_news_station.cpp
my_py_pkg/: CMakeLists.txt  package.xml  setup.py
my_py_pkg/launch/: test.launch.py
my_py_pkg/my_py_pkg/: add_two_ints_server.py  client_server_node.py  launch_yaml_example.py  led_panel_node.py  number_publisher.py  number_reset.py
my_robot_bringup/: CMakeLists.txt
my_robot_bringup/config/: example.yaml
my_robot_bringup/launch/: launch_yaml_example.launch.py  number_app.launch.py  robot_news.launch.py
my_robot_interfaces/: CMakeLists.txt
my_robot_interfaces/srv/: SetLed.srv
turtlesim_pkg/: setup.cfg  setup.py
turtlesim_pkg/turtlesim_pkg/: turtle_controller.py  turtle_spawner.py
turtlesim_pkg_msgs/: CMakeLists.txt  package.xml
(+80 files in other folders)
